syntax = "proto3";

package com.road.yishi.proto.charge;

message ChargeOrderReq {
  string productId = 1;
  int32 count = 2;
}
